docs: 13_デプロイ手順.md装飾完了 文章変更なし

--- a/docs-site/docs/13_デプロイ手順.md
+++ b/docs-site/docs/13_デプロイ手順.md
@@ -48,7 +48,7 @@ az account show
 ```
 
 **インストール確認**：
-```bash
+```bash title="必要ツールのバージョン確認"
 az --version
 terraform --version
 git --version
@@ -68,7 +68,7 @@ code --version
 
 ### Step 1-1: Subscriptionの確認
 
-```bash
+```bash title="AzureログインとSubscription選択"
 # ログイン
 az login
 
@@ -145,7 +145,7 @@ repo:shuhei0720org01/alz-mgmt:ref:refs/heads/main
 
 **では、実際に設定していきましょう**:
 
-```bash
+```bash title="OIDC用Service Principalの作成"
 # 変数設定
 APP_NAME="github-actions-alz-mgmt"
 REPO_OWNER="your-github-username"
@@ -190,7 +190,7 @@ az ad app federated-credential create \
 ```
 
 **保存しておく値**：
-```bash
+```bash title="GitHub Secretsに設定する値の表示"
 echo "AZURE_CLIENT_ID: $APP_ID"
 echo "AZURE_TENANT_ID: $(az account show --query tenantId -o tsv)"
 echo "AZURE_SUBSCRIPTION_ID: $SUBSCRIPTION_ID"
@@ -200,7 +200,7 @@ echo "AZURE_SUBSCRIPTION_ID: $SUBSCRIPTION_ID"
 
 ### Step 1-3: Storage Account作成（Terraform State用）
 
-```bash
+```bash title="State用Storage Accountの作成"
 # 変数設定
 LOCATION="japaneast"
 RG_NAME="rg-terraform-state"
@@ -241,7 +241,7 @@ az role assignment create \
 ```
 
 **保存しておく値**：
-```bash
+```bash title="Backend設定用の値表示"
 echo "ARM_STORAGE_ACCOUNT_NAME: $STORAGE_ACCOUNT_NAME"
 echo "ARM_CONTAINER_NAME: $CONTAINER_NAME"
 echo "ARM_KEY: alz-mgmt.tfstate"
@@ -256,7 +256,7 @@ echo "ARM_RESOURCE_GROUP_NAME: $RG_NAME"
 
 ### Step 2-1: リポジトリ作成
 
-```bash
+```bash title="GitHubリポジトリのセットアップ"
 # ローカルにclone済みの前提
 cd ~/projects
 git clone https://github.com/$REPO_OWNER/$REPO_NAME.git
@@ -298,7 +298,7 @@ git init
 ```
 .gitignore を作る：
 ```
-```gitignore
+```gitignore title=".gitignoreの設定"
 # Terraform
 .terraform/
 *.tfstate
@@ -322,7 +322,7 @@ Thumbs.db
 
 platform-landing-zone.auto.tfvars を自分の環境に合わせて編集：
 
-```hcl
+```hcl title="最小構成の設定例"
 # 最小限の設定例
 starter_location_01 = "japaneast"
 starter_location_02 = "japanwest"
@@ -366,7 +366,7 @@ hub_virtual_networks = {
 ```
 
 **Subscription ID確認**：
-```bash
+```bash title="Subscription一覧の表示"
 az account list --output table
 ```
 
@@ -378,7 +378,7 @@ az account list --output table
 
 ### Step 2-4: Commit & Push
 
-```bash
+```bash title="初回コミットとPush"
 git add .
 git commit -m "Initial commit"
 git push origin main
@@ -458,7 +458,7 @@ GitHub Actionsでいきなりやると：
 
 ### Step 3-1: Terraform初期化
 
-```bash
+```bash title="Terraform初期化とBackend設定"
 # 環境変数設定
 export ARM_STORAGE_ACCOUNT_NAME="<Step 1-3の値>"
 export ARM_CONTAINER_NAME="tfstate"
@@ -489,7 +489,7 @@ Terraform has been successfully initialized!
 
 ### Step 3-2: Terraform Validate
 
-```bash
+```bash title="構文チェック"
 terraform validate
 ```
 
@@ -509,7 +509,7 @@ Error: Missing required argument
 
 ### Step 3-3: Terraform Plan
 
-```bash
+```bash title="変更内容の確認"
 terraform plan -out=tfplan
 ```
 
@@ -533,7 +533,7 @@ Plan: 45 to add, 0 to change, 0 to destroy.
 
 ### Step 3-4: Terraform Apply
 
-```bash
+```bash title="リソースの作成"
 terraform apply tfplan
 ```
 
@@ -555,7 +555,7 @@ Apply complete! Resources: 45 added, 0 changed, 0 destroyed.
 
 #### Management Group確認
 
-```bash
+```bash title="Management Groupの確認"
 # Azure Portal
 https://portal.azure.com/#view/Microsoft_Azure_ManagementGroups/ManagementGroupBrowseBlade/~/MGBrowse_overview
 
@@ -578,7 +578,7 @@ myorg（Root）
 
 #### Resource Group確認
 
-```bash
+```bash title="Resource Group一覧の表示"
 az group list --output table
 ```
 
@@ -591,7 +591,7 @@ rg-myorg-identity-001
 
 #### Log Analytics確認
 
-```bash
+```bash title="Log Analytics Workspaceの確認"
 az monitor log-analytics workspace list --output table
 ```
 
@@ -601,7 +601,7 @@ az monitor log-analytics workspace list --output table
 
 ### Step 4-1: テスト用の変更
 
-```bash
+```bash title="テスト用リソースの追加"
 # 新しいブランチ
 git checkout -b feature/test-github-actions
 
@@ -708,7 +708,7 @@ Apply complete! Resources: 1 added, 0 changed, 0 destroyed.
 
 ### Step 4-6: Azure確認
 
-```bash
+```bash title="作成されたリソースの確認"
 az group show --name rg-test-github-actions
 ```
 
@@ -716,7 +716,7 @@ az group show --name rg-test-github-actions
 
 ### Step 4-7: クリーンアップ
 
-```bash
+```bash title="テストリソースの削除"
 # ブランチ作成
 git checkout main
 git pull
@@ -737,13 +737,13 @@ git push origin feature/cleanup-test
 
 ### Step 5-1: 設定ファイルを本番仕様に
 
-```bash
+```bash title="本番環境用ブランチ作成"
 git checkout -b feature/enable-production-resources
 ```
 
 platform-landing-zone.auto.tfvars 編集：
 
-```hcl
+```hcl title="本番環境の設定（Firewall有効化）"
 # Firewall有効化
 hub_virtual_networks = {
   primary = {
@@ -804,7 +804,7 @@ hub_virtual_networks = {
 
 ### Step 5-2: Commit & PR
 
-```bash
+```bash title="本番設定のコミット"
 git add platform-landing-zone.auto.tfvars
 git commit -m "Enable Firewall and Bastion for production"
 git push origin feature/enable-production-resources
@@ -856,7 +856,7 @@ CD実行 → 30〜60分かかる
 
 ### Step 6-1: Management Group確認
 
-```bash
+```bash title="Management Group階層構造の確認"
 az account management-group show \
   --name myorg \
   --expand \
@@ -867,7 +867,7 @@ az account management-group show \
 
 ### Step 6-2: Policy確認
 
-```bash
+```bash title="Policy Assignmentの確認"
 # Policy Assignment一覧
 az policy assignment list --output table
 
@@ -879,7 +879,7 @@ az policy assignment list \
 
 ### Step 6-3: Log Analytics確認
 
-```bash
+```bash title="Log Analyticsデータの確認"
 # Workspace確認
 WORKSPACE_ID=$(az monitor log-analytics workspace show \
   --resource-group rg-myorg-management-001 \
@@ -895,7 +895,7 @@ az monitor log-analytics query \
 
 ### Step 6-4: Firewall確認
 
-```bash
+```bash title="Azure Firewallの確認"
 # Firewall確認
 az network firewall show \
   --resource-group rg-myorg-connectivity-001 \
@@ -910,7 +910,7 @@ az network firewall show \
 
 ### Step 6-5: Bastion確認
 
-```bash
+```bash title="Azure Bastionの確認"
 az network bastion show \
   --resource-group rg-myorg-connectivity-001 \
   --name bas-myorg-jpe-hub
@@ -918,13 +918,13 @@ az network bastion show \
 
 ### Step 6-6: Spoke VNet追加テスト
 
-```bash
+```bash title="Spoke VNet用ブランチ作成"
 git checkout -b feature/add-spoke-vnet
 ```
 
 **新規ファイル作成**：`spoke.tf`
 
-```hcl
+```hcl title="Spoke VNetとHubへのピアリング設定"
 resource "azurerm_virtual_network" "spoke1" {
   name                = "vnet-myorg-spoke1"
   location            = "japaneast"
@@ -988,7 +988,7 @@ Error: Unable to get ACTIONS_ID_TOKEN_REQUEST_URL
 **原因**：Federated Credentialの設定間違い
 
 **確認**：
-```bash
+```bash title="Federated Credentialの確認"
 az ad app federated-credential list --id $APP_ID
 ```
 
@@ -1000,7 +1000,7 @@ az ad app federated-credential list --id $APP_ID
 ```
 
 **間違ってたら削除して再作成**：
-```bash
+```bash title="Federated Credentialの再作成"
 az ad app federated-credential delete \
   --id $APP_ID \
   --federated-credential-id <CREDENTIAL_ID>
@@ -1017,7 +1017,7 @@ Error: Failed to get existing workspaces: blob not found
 **原因**：Service PrincipalにStorage権限がない
 
 **対処法**：
-```bash
+```bash title="Storage権限の付与"
 STORAGE_ACCOUNT_ID=$(az storage account show \
   --name $ARM_STORAGE_ACCOUNT_NAME \
   --resource-group $ARM_RESOURCE_GROUP_NAME \
@@ -1038,14 +1038,14 @@ Error: insufficient privileges to complete the operation
 **原因**：Service PrincipalにOwner権限がない
 
 **確認**：
-```bash
+```bash title="Subscription権限の確認"
 az role assignment list \
   --assignee $APP_ID \
   --scope "/subscriptions/$SUBSCRIPTION_ID"
 ```
 
 **Owner権限付与**：
-```bash
+```bash title="Service PrincipalへのOwner権限付与"
 az role assignment create \
   --assignee $APP_ID \
   --role "Owner" \
@@ -1061,7 +1061,7 @@ Error: Error acquiring the state lock
 **原因**：前回のワークフローが失敗してLockが残ってる
 
 **対処法**：
-```bash
+```bash title="State Lockファイルの削除"
 # Azure Portal → Storage Account → tfstateコンテナ
 # .terraform.lock.info ファイルを削除
 
@@ -1079,7 +1079,7 @@ az storage blob delete \
 
 ### ✅ Management Group
 
-```bash
+```bash title="Management Group階層構造の確認"
 # 階層構造確認
 az account management-group list --output table
 
@@ -1097,7 +1097,7 @@ az account management-group list --output table
 
 ### ✅ Resource Group
 
-```bash
+```bash title="Resource Groupの確認"
 az group list --query "[].{Name:name, Location:location}" --output table
 
 # 期待されるResource Group：
@@ -1109,7 +1109,7 @@ az group list --query "[].{Name:name, Location:location}" --output table
 
 ### ✅ Log Analytics Workspace
 
-```bash
+```bash title="Log Analytics Workspaceの確認"
 az monitor log-analytics workspace list --output table
 
 # law-myorg-management-001 が存在
@@ -1117,7 +1117,7 @@ az monitor log-analytics workspace list --output table
 
 ### ✅ VNet（有効化している場合）
 
-```bash
+```bash title="VNetの確認"
 az network vnet list --output table
 
 # vnet-myorg-jpe-hub が存在
@@ -1125,7 +1125,7 @@ az network vnet list --output table
 
 ### ✅ Firewall（有効化している場合）
 
-```bash
+```bash title="Firewallの確認"
 az network firewall list --output table
 
 # fw-myorg-jpe-hub が存在
@@ -1133,7 +1133,7 @@ az network firewall list --output table
 
 ### ✅ Policy Assignment
 
-```bash
+```bash title="Policy Assignmentの確認"
 az policy assignment list \
   --scope "/providers/Microsoft.Management/managementGroups/myorg" \
   --output table
