docs: 14_トラブルシューティング.md装飾完了 文章変更なし

--- a/docs-site/docs/14_トラブルシューティング.md
+++ b/docs-site/docs/14_トラブルシューティング.md
@@ -44,7 +44,7 @@ OIDCトークンが取得できない
 ```
 
 **対処法**：
-```yaml
+```yaml title="permissions設定の追加"
 # .github/workflows/ci.yaml
 jobs:
   validate_and_plan:
@@ -69,12 +69,12 @@ subject（リポジトリパス）が違う
 ```
 
 **確認**：
-```bash
+```bash title="Federated Credentialの確認"
 az ad app federated-credential list --id $APP_ID
 ```
 
 **修正**：
-```bash
+```bash title="Federated Credentialの再作成"
 # 間違ったCredentialを削除
 az ad app federated-credential delete \
   --id $APP_ID \
@@ -116,7 +116,7 @@ Error: No subscriptions found for <user@example.com>
 ```
 
 **対処法**：
-```bash
+```bash title="Azureの再ログイン"
 # 再ログイン
 az logout
 az login
@@ -145,7 +145,7 @@ Policy割り当て
 ```
 
 **対処法**：
-```bash
+```bash title="Service Principal権限の確認と付与"
 # 現在の権限確認
 az role assignment list \
   --assignee $APP_ID \
@@ -192,7 +192,7 @@ Lockが残ってる
 ```
 
 **対処法1（推奨）**：ロック解除
-```bash
+```bash title="Terraform State Lockの解除"
 # ロックID確認（エラーメッセージから）
 LOCK_ID="abc123-def456-..."
 
@@ -201,7 +201,7 @@ terraform force-unlock $LOCK_ID
 ```
 
 **対処法2（Storage Accountから直接削除）**：
-```bash
+```bash title="Lockファイルの直接削除"
 # Azure Portal
 Storage Account → Containers → tfstate → .terraform.lock.info
 → Delete
@@ -238,7 +238,7 @@ Backend設定の環境変数が間違ってる
 ```
 
 **確認**：
-```bash
+```bash title="Storage AccountとContainerの確認"
 # Storage Account確認
 az storage account show \
   --name $ARM_STORAGE_ACCOUNT_NAME \
@@ -252,7 +252,7 @@ az storage container show \
 ```
 
 **対処法**：
-```bash
+```bash title="Storage Containerの作成"
 # Containerが存在しない場合、作成
 az storage container create \
   --name $ARM_CONTAINER_NAME \
@@ -274,7 +274,7 @@ Service PrincipalにStorage Blob Data Contributor権限がない
 ```
 
 **対処法**：
-```bash
+```bash title="Storage Blob Data Contributor権限の付与"
 # Storage Account IDを取得
 STORAGE_ACCOUNT_ID=$(az storage account show \
   --name $ARM_STORAGE_ACCOUNT_NAME \
@@ -310,7 +310,7 @@ Stateファイルと実際のリソースが不一致
 ```
 
 **対処法1（変更を取り込む）**：
-```bash
+```bash title="Stateに実際の状態を反映"
 # 現在の状態をStateに反映
 terraform apply -refresh-only
 
@@ -319,7 +319,7 @@ terraform apply -refresh-only -target=azurerm_resource_group.example
 ```
 
 **対処法2（Azureの変更を戻す）**：
-```bash
+```bash title="リソースをコード通りに戻す"
 # terraform applyで元に戻す
 terraform apply
 ```
@@ -352,7 +352,7 @@ Japan East/Westでzones指定してる
 ```
 
 **対処法**：
-```hcl
+```hcl title="Availability Zonesの無効化"
 # NG
 bastion = {
   zones = ["1", "2", "3"]
@@ -386,7 +386,7 @@ Error: A resource with the ID "/subscriptions/.../resourceGroups/rg-test" alread
 ```
 
 **確認**：
-```bash
+```bash title="リソース名の重複確認"
 # Resource Group確認
 az group show --name rg-test
 
@@ -416,7 +416,7 @@ Error: subnet address prefix overlaps with existing subnet
 ```
 
 **例（NG）**：
-```hcl
+```hcl title="サブネットアドレスの重複例"
 hub_virtual_network = {
   address_space = ["10.0.0.0/16"]
 }
@@ -431,7 +431,7 @@ bastion = {
 ```
 
 **対処法**：
-```hcl
+```hcl title="サブネットアドレスの正しい分割"
 firewall = {
   subnet_address_prefix = "10.0.0.0/26"   # 10.0.0.0 - 10.0.0.63
 }
@@ -464,7 +464,7 @@ root_id + "-" + 名前 が長い
 ```
 
 **例（NG）**：
-```hcl
+```hcl title="Management Group名が長すぎる例"
 root_id = "my-very-long-organization-name"
   ↓
 Management Group名:
@@ -473,7 +473,7 @@ Management Group名:
 ```
 
 **対処法**：
-```hcl
+```hcl title="root_idの短縮化"
 # root_idを短くする
 root_id = "myorg"
 ```
@@ -507,7 +507,7 @@ resource "azurerm_firewall" "example" {
 ```
 
 **対処法2（再実行）**：
-```bash
+```bash title="Terraformの再実行"
 # もう一度apply
 terraform apply
 
@@ -530,7 +530,7 @@ Policy Definitionが存在しない
 ```
 
 **対処法**：
-```hcl
+```hcl title="Policyの依存関係設定"
 # Policy Definition作成
 resource "azurerm_policy_definition" "example" {
   name         = "custom-policy"
@@ -575,7 +575,7 @@ GitHubのRepository設定でWorkflow権限が制限されてる
 ```
 
 **対処法**：
-```
+```yaml title="GitHub Repository設定パス"
 GitHub → Settings → Actions → General
   ↓
 Workflow permissions:
@@ -597,7 +597,7 @@ GitHub Secretsが設定されてない
 ```
 
 **確認**：
-```
+```yaml title="必要なGitHub Secrets"
 GitHub → Settings → Secrets and variables → Actions
   ↓
 必要なSecrets:
@@ -632,7 +632,7 @@ Environment設定でRequired reviewersが空
 ```
 
 **対処法**：
-```
+```yaml title="Environment設定パス"
 GitHub → Settings → Environments → production
   ↓
 Required reviewers:
@@ -655,7 +655,7 @@ Terraform State Lock競合
 ```
 
 **対処法1（Concurrency設定）**：
-```yaml
+```yaml title="cd.yaml - Concurrency設定"
 # .github/workflows/cd.yaml
 jobs:
   plan_and_apply:
@@ -665,7 +665,7 @@ jobs:
 ```
 
 **対処法2（手動でLock解除）**：
-```bash
+```bash title="Terraform State Lockの強制解除"
 terraform force-unlock <LOCK_ID>
 ```
 
@@ -688,7 +688,7 @@ terraform init してない
 ```
 
 **対処法**：
-```bash
+```bash title="モジュールの初期化"
 terraform init
 ```
 
@@ -705,7 +705,7 @@ Error: no available releases match the given constraints
 ```
 
 **確認**：
-```hcl
+```hcl title="モジュールバージョン確認"
 module "hub_and_spoke_vnet" {
   source  = "Azure/avm-ptn-alz-connectivity-hub-and-spoke-vnet/azurerm"
   version = "0.16.8"  # ←このバージョンが存在するか
@@ -747,7 +747,7 @@ variables.tf確認
 
 #### テクニック1: Terraform Debug Mode
 
-```bash
+```bash title="Terraformデバッグログの有効化"
 # デバッグモード有効化
 export TF_LOG=DEBUG
 export TF_LOG_PATH=terraform-debug.log
@@ -770,7 +770,7 @@ ERROR：エラーのみ
 
 #### テクニック2: Terraform Graph
 
-```bash
+```bash title="依存関係の可視化"
 # 依存関係の可視化
 terraform graph | dot -Tpng > graph.png
 
@@ -792,7 +792,7 @@ start graph.png
 
 #### テクニック3: Terraform Show
 
-```bash
+```bash title="PlanとStateの詳細表示"
 # Plan結果の詳細表示
 terraform show tfplan
 
@@ -805,7 +805,7 @@ terraform show -json > state.json
 
 #### テクニック4: Terraform Console
 
-```bash
+```bash title="Terraform対話型コンソール"
 # 対話型コンソール
 terraform console
 
@@ -832,7 +832,7 @@ terraform console
 
 #### テクニック5: Azure CLI Debug
 
-```bash
+```bash title="Azure CLIデバッグモード"
 # Azure CLI Debug Mode
 az login --debug
 
@@ -852,7 +852,7 @@ Terraform 1.12から1.13にアップグレードしたい
 ```
 
 **回答**：
-```bash
+```bash title="Terraformバージョンアップグレード手順"
 # 1. ローカルでテスト
 terraform version  # 現在: 1.12
 
@@ -864,6 +864,7 @@ terraform version  # 確認: 1.13
 
 # 2. terraform.tf更新
 # terraform.tf
+```hcl title="terraform.tf - バージョン更新"
 terraform {
   required_version = "~> 1.13"  # ←更新
 }
@@ -879,6 +880,7 @@ git commit -am "Upgrade Terraform to 1.13"
 
 # 6. GitHub Actions設定更新
 # .github/workflows/ci.yaml
+```yaml title="ci.yaml - Terraformバージョン更新"
 terraform_cli_version: '1.13.0'  # ←更新
 ```
 
@@ -890,7 +892,7 @@ terraform_cli_version: '1.13.0'  # ←更新
 ```
 
 **回答**：
-```bash
+```bash title="Terraform管理からリソースを外す手順"
 # 1. Stateから削除
 terraform state rm azurerm_resource_group.example
 
@@ -913,7 +915,7 @@ terraform plan
 ```
 
 **回答**：
-```bash
+```bash title="既存リソースをTerraformにインポート"
 # 1. .tfファイルに定義追加
 # main.tf
 resource "azurerm_resource_group" "imported" {
@@ -940,7 +942,7 @@ terraform apply
 ```
 
 **回答**：
-```hcl
+```hcl title="高額リソースの無効化"
 # 高額なリソースを無効化
 hub_virtual_networks = {
   primary = {
@@ -985,7 +987,7 @@ DDoS: 40万円
 **チェックポイント**：
 
 1. **Terraformバージョン**：
-```bash
+```bash title="Terraformバージョンの確認"
 # ローカル
 terraform version
 
@@ -995,7 +997,7 @@ terraform_cli_version: '1.12.0'  # ←これと一致させる
 ```
 
 2. **環境変数**：
-```bash
+```bash title="環境変数の確認"
 # ローカル
 env | grep ARM_
 
@@ -1004,7 +1006,7 @@ env | grep ARM_
 ```
 
 3. **権限**：
-```bash
+```bash title="権限の確認"
 # ローカル: ユーザーの権限
 az account show
 
@@ -1038,7 +1040,7 @@ Error: zones - availability zones are not supported
 
 ### ステップ2: ログを確認
 
-```bash
+```bash title="ログの保存と確認"
 # Terraform実行ログ
 terraform plan 2>&1 | tee terraform.log
 
@@ -1048,7 +1050,7 @@ Actions → 失敗したワークフロー → Details
 
 ### ステップ3: State確認
 
-```bash
+```bash title="Terraform Stateの確認"
 # State一覧
 terraform state list
 
@@ -1061,7 +1063,7 @@ terraform show
 
 ### ステップ4: Azure確認
 
-```bash
+```bash title="Azureリソースの確認"
 # リソース確認
 az resource list --output table
 
@@ -1087,7 +1089,7 @@ https://registry.terraform.io/modules/Azure/...
 
 ### ステップ6: 切り分け
 
-```bash
+```hcl title="最小構成でのテスト"
 # 最小構成でテスト
 # test.tf
 resource "azurerm_resource_group" "test" {
@@ -1144,7 +1146,7 @@ PR作成
 
 ### 4. バックアップ
 
-```bash
+```bash title="Stateファイルのバックアップ"
 # State Fileのバックアップ
 terraform state pull > state-backup.json
 
