docs: 15_カスタマイズ.md装飾完了 文章変更なし

--- a/docs-site/docs/15_カスタマイズ.md
+++ b/docs-site/docs/15_カスタマイズ.md
@@ -33,7 +33,7 @@ Microsoft推奨のベストプラクティス
 
 ### ファイル構成
 
-```
+```bash title="lib/フォルダの構造"
 lib/
 ├── alz_library_metadata.json
 ├── archetype_definitions/
@@ -62,7 +62,7 @@ Management Groupの階層構造を定義
 ```
 
 **内容**：
-```yaml
+```yaml title="alz_custom.alz_architecture_definition.yaml"
 name: alz_custom
 management_groups:
   - id: alz
@@ -90,7 +90,7 @@ management_groups:
 ```
 
 **内容**：
-```yaml
+```yaml title="root_custom.alz_archetype_override.yaml"
 base_archetype: root
 name: root_custom
 policy_assignments_to_add: []      # 追加するポリシー
@@ -159,7 +159,7 @@ role_definitions_to_add: []
 
 #### Step 3: デプロイ
 
-```bash
+```bash title="変更のデプロイ"
 # Plan確認
 terraform plan
 
@@ -233,7 +233,7 @@ alz
 
 **lib/architecture_definitions/alz_custom.alz_architecture_definition.yaml**：
 
-```yaml
+```yaml title="Security Management Groupの親変更"
 - id: security
   display_name: Security
   archetypes:
@@ -263,7 +263,7 @@ alz
 
 **lib/archetype_definitions/landing_zones_custom.alz_archetype_override.yaml**：
 
-```yaml
+```yaml title="リージョン制限ポリシーの削除"
 base_archetype: landing_zones
 name: landing_zones_custom
 
@@ -284,7 +284,7 @@ policy_set_definitions_to_add: []
 
 **lib/archetype_definitions/corp_custom.alz_archetype_override.yaml**：
 
-```yaml
+```yaml title="タグ必須ポリシーの追加"
 base_archetype: corp
 name: corp_custom
 
@@ -329,7 +329,7 @@ policy_set_definitions_to_add: []
 
 同じファイルに追加：
 
-```yaml
+```yaml title="ポリシー割り当て設定"
 policy_assignments_to_add:
   - assignment_name: Deny-Resources-Without-Required-Tags
     assignment_display_name: "Require CostCenter tag"
@@ -380,7 +380,7 @@ policy_assignments_to_add:
 ### デフォルトの命名規則
 
 **terraform.tfvars.json**：
-```json
+```json title="デフォルトのプレフィックス設定"
 {
   "resource_group_name_prefix": "rg",
   "virtual_network_name_prefix": "vnet",
@@ -426,7 +426,7 @@ locals {
 #### 変数追加:
 
 **variables.tf**：
-```hcl
+```hcl title="環境変数の定義"
 variable "environment" {
   type        = string
   description = "Environment name (prd, stg, dev)"
@@ -441,7 +441,7 @@ variable "environment" {
 
 #### terraform.tfvars.jsonに設定:
 
-```json
+```json title="環境名の設定"
 {
   "environment": "prd"
 }
@@ -495,7 +495,7 @@ locals {
 
 #### platform-landing-zone.auto.tfvarsに追加:
 
-```hcl
+```hcl title="Application Gateway用サブネットの追加"
 hub_virtual_networks = {
   primary = {
     hub_virtual_network = {
@@ -519,7 +519,7 @@ hub_virtual_networks = {
 
 #### 新規ファイル作成: firewall-rules.tf
 
-```hcl
+```hcl title="カスタムFirewallルールの追加"
 resource "azurerm_firewall_policy_rule_collection_group" "custom" {
   name               = "custom-rules"
   firewall_policy_id = module.hub_and_spoke_vnet[0].firewall_policy["primary"].id
@@ -582,7 +582,7 @@ resource "azurerm_firewall_policy_rule_collection_group" "custom" {
 
 #### spoke-vnets.tf:
 
-```hcl
+```hcl title="本番用Spoke VNetの作成"
 # 本番用Spoke VNet
 resource "azurerm_virtual_network" "spoke_production" {
   name                = "vnet-myorg-spoke-prd"
@@ -652,7 +652,7 @@ resource "azurerm_virtual_network" "spoke_dr" {
 ### デフォルト設定
 
 **platform-landing-zone.auto.tfvars**：
-```hcl
+```hcl title="サブスクリプションID設定"
 subscription_id_management  = "<SUB_ID_1>"
 subscription_id_identity    = "<SUB_ID_2>"
 subscription_id_connectivity = "<SUB_ID_3>"
@@ -661,7 +661,7 @@ subscription_id_connectivity = "<SUB_ID_3>"
 ### カスタマイズ: 1つのサブスクリプションで全部
 
 **小規模な組織の場合**：
-```hcl
+```hcl title="全リソースを単一サブスクリプションで"
 # 全部同じSubscription ID
 subscription_id_management  = "<SINGLE_SUB_ID>"
 subscription_id_identity    = "<SINGLE_SUB_ID>"
@@ -686,7 +686,7 @@ subscription_id_connectivity = "<SINGLE_SUB_ID>"
 
 #### terraform.tfvars.jsonに追加:
 
-```json
+```json title="開発用サブスクリプションIDの追加"
 {
   "subscription_id_development": "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
 }
@@ -694,7 +694,7 @@ subscription_id_connectivity = "<SINGLE_SUB_ID>"
 
 #### variables.tfに追加:
 
-```hcl
+```hcl title="開発用サブスクリプション変数定義"
 variable "subscription_id_development" {
   type        = string
   description = "Subscription ID for Development"
@@ -703,7 +703,7 @@ variable "subscription_id_development" {
 
 #### locals.tfまたはmain.tfでManagement Groupに配置:
 
-```hcl
+```hcl title="サブスクリプションをManagement Groupに関連付け"
 resource "azurerm_management_group_subscription_association" "development" {
   management_group_id = "/providers/Microsoft.Management/managementGroups/${var.root_id}-development"
   subscription_id     = "/subscriptions/${var.subscription_id_development}"
@@ -719,7 +719,7 @@ resource "azurerm_management_group_subscription_association" "development" {
 ### デフォルトタグ
 
 **platform-landing-zone.auto.tfvars**：
-```hcl
+```hcl title="デフォルトタグ設定"
 tags = {
   Environment = "Production"
   ManagedBy   = "Terraform"
@@ -728,7 +728,7 @@ tags = {
 
 ### カスタマイズ: 組織固有のタグ追加
 
-```hcl
+```hcl title="組織固有タグの追加"
 tags = {
   Environment = "Production"
   ManagedBy   = "Terraform"
@@ -742,7 +742,7 @@ tags = {
 
 ### リソースタイプごとのタグ
 
-```hcl
+```hcl title="リソースタイプ別のタグ設定"
 management_tags = {
   Environment = "Management"
   Purpose     = "Logging and Monitoring"
@@ -771,7 +771,7 @@ identity_tags = {
 
 #### platform-landing-zone.auto.tfvarsに追加:
 
-```hcl
+```hcl title="Log Analytics保持期間の延長"
 management_resources_settings = {
   log_analytics_workspace = {
     retention_in_days = 90  # ←90日に延長
@@ -792,7 +792,7 @@ management_resources_settings = {
 
 #### 新規ファイル: custom-dcr.tf
 
-```hcl
+```hcl title="カスタムData Collection Ruleの作成"
 resource "azurerm_monitor_data_collection_rule" "custom_logs" {
   name                = "dcr-custom-logs"
   resource_group_name = "rg-myorg-management-001"
@@ -869,7 +869,7 @@ management_groups:
 
 **lib/archetype_definitions/production_custom.alz_archetype_override.yaml**：
 
-```yaml
+```yaml title="本番環境：厳格なポリシー設定"
 base_archetype: landing_zones
 name: production_custom
 
@@ -903,7 +903,7 @@ policy_assignments_to_remove:
 
 **platform-landing-zone.auto.tfvars**：
 
-```hcl
+```hcl title="本番と開発で別々のHub VNet"
 # 本番用Hub
 hub_virtual_networks = {
   production = {
