docs: 16_ベストプラクティス.md装飾完了 文章変更なし

--- a/docs-site/docs/16_ベストプラクティス.md
+++ b/docs-site/docs/16_ベストプラクティス.md
@@ -47,7 +47,7 @@ Microsoftの推奨事項
 ```
 
 **実装**：
-```hcl
+```hcl title="開発者用カスタムロールの定義"
 # カスタムロール定義
 resource "azurerm_role_definition" "developer" {
   name  = "Landing Zone Developer"
@@ -152,7 +152,7 @@ Public Endpoint無効化
 ```
 
 **例（Storage Account）**：
-```hcl
+```hcl title="Storage AccountへのPrivate Endpoint設定"
 resource "azurerm_storage_account" "example" {
   name                     = "stexample12345"
   resource_group_name      = azurerm_resource_group.example.name
@@ -190,7 +190,7 @@ resource "azurerm_private_endpoint" "example" {
 ```
 
 **ツール**：
-```bash
+```bash title="ロール割り当ての確認"
 # 全ロール割り当て確認
 az role assignment list --all --output table
 
@@ -236,7 +236,7 @@ Log Analytics: データ量による（5GB/月まで無料）
 ```
 
 **必須タグ**：
-```hcl
+```hcl title="リソース用の必須タグ定義"
 tags = {
   CostCenter  = "1000"           # コストセンター
   Environment = "Production"      # 環境
@@ -247,7 +247,7 @@ tags = {
 ```
 
 **ポリシーで強制**：
-```yaml
+```yaml title="タグ必須ポリシーの適用"
 # lib/archetype_definitions/corp_custom.alz_archetype_override.yaml
 policy_assignments_to_add:
   - Require-Tags
@@ -268,7 +268,7 @@ policy_assignments_to_add:
 ```
 
 **実装（Azure Automation）**：
-```hcl
+```hcl title="開発環境VM自動停止スケジュール"
 resource "azurerm_automation_schedule" "stop_vms" {
   name                    = "schedule-stop-vms"
   resource_group_name     = azurerm_resource_group.automation.name
@@ -320,7 +320,7 @@ Azure Portal → Reservations → Purchase reservation
 ```
 
 **実装**：
-```hcl
+```hcl title="月次予算とアラート設定"
 resource "azurerm_consumption_budget_subscription" "example" {
   name            = "budget-monthly"
   subscription_id = "/subscriptions/${var.subscription_id}"
@@ -357,7 +357,7 @@ resource "azurerm_consumption_budget_subscription" "example" {
 ### 2-6. 不要リソースの削除
 
 **定期的にチェック**：
-```bash
+```bash title="未使用リソースの確認"
 # 過去30日間使われてないVM
 az vm list --query "[?powerState=='VM deallocated']" --output table
 
@@ -442,7 +442,7 @@ modules/
 ```
 
 **使用**：
-```hcl
+```hcl title="モジュールの再利用"
 module "spoke_production" {
   source = "./modules/spoke-vnet"
   
@@ -472,7 +472,7 @@ module "spoke_development" {
 ```
 
 **例**：
-```hcl
+```hcl title="変数のバリデーション設定"
 variable "environment" {
   type        = string
   description = "Environment name"
@@ -512,7 +512,7 @@ variable "vm_size" {
 ```
 
 **例**：
-```hcl
+```hcl title="モジュールのOutput定義"
 # modules/hub-vnet/outputs.tf
 output "vnet_id" {
   value       = azurerm_virtual_network.hub.id
@@ -757,7 +757,7 @@ Hub-and-Spokeを採用。
 **定期的に確認するクエリ**：
 
 #### 1. Firewallで拒否されたトラフィック
-```kql
+```kql title="Firewall拒否ログの抽出"
 AzureDiagnostics
 | where Category == "AzureFirewallApplicationRule" or Category == "AzureFirewallNetworkRule"
 | where msg_s contains "Deny"
@@ -767,7 +767,7 @@ AzureDiagnostics
 ```
 
 #### 2. 異常なログイン試行
-```kql
+```kql title="失敗したログイン試行の集計"
 SigninLogs
 | where ResultType != "0"  // 失敗
 | where TimeGenerated > ago(24h)
@@ -777,7 +777,7 @@ SigninLogs
 ```
 
 #### 3. リソースの変更履歴
-```kql
+```kql title="リソースの書き込み・削除履歴"
 AzureActivity
 | where OperationName contains "write" or OperationName contains "delete"
 | where TimeGenerated > ago(7d)
@@ -790,7 +790,7 @@ AzureActivity
 **設定すべきアラート**：
 
 #### 1. Firewall CPU使用率
-```hcl
+```hcl title="Firewall健全性監視アラート"
 resource "azurerm_monitor_metric_alert" "firewall_cpu" {
   name                = "alert-firewall-cpu-high"
   resource_group_name = azurerm_resource_group.connectivity.name
@@ -812,7 +812,7 @@ resource "azurerm_monitor_metric_alert" "firewall_cpu" {
 ```
 
 #### 2. Storage Account容量
-```hcl
+```hcl title="Storage容量監視アラート"
 resource "azurerm_monitor_metric_alert" "storage_capacity" {
   name                = "alert-storage-capacity-high"
   resource_group_name = azurerm_resource_group.management.name
@@ -836,7 +836,7 @@ resource "azurerm_monitor_metric_alert" "storage_capacity" {
 ### 6-3. Action Group
 
 **通知先の設定**：
-```hcl
+```hcl title="アラート通知先の設定"
 resource "azurerm_monitor_action_group" "platform_team" {
   name                = "ag-platform-team"
   resource_group_name = azurerm_resource_group.management.name
@@ -872,7 +872,7 @@ resource "azurerm_monitor_action_group" "platform_team" {
 ```
 
 **実装**：
-```bash
+```bash title="Terraform Stateバックアップスクリプト"
 #!/bin/bash
 # backup-tfstate.sh
 
@@ -891,7 +891,7 @@ echo "Backup completed: $BACKUP_DIR/terraform-state-$DATE.json"
 ```
 
 **Cron設定**：
-```cron
+```cron title="毎日自動バックアップ設定"
 # 毎日午前2時にバックアップ
 0 2 * * * /path/to/backup-tfstate.sh
 ```
