docs: クローン推奨の記述を削除し、学習用コード例であることを明確化
## 変更理由

このリポジトリは完成済みのコード例であり、そのままクローンしても実行できません。
クローンを推奨する記述が誤解を招くため、削除しました。

## 変更内容

### Chapter 00: はじめに

#### 削除
- "クローンしてVSCodeで見る" タブを削除
- クローン手順の記述を削除

#### 追加・改善
- "このリポジトリをクローンしないでください" 警告を追加
- GitHubで見ることを推奨（タブからアドモニションに変更）
- 実際にデプロイする場合は Chapter 14 から始めることを明記

### Chapter 02: プロジェクト構造

- 冒頭に注意書きを追加
- このリポジトリが学習用コード例であることを明記
- 実際のデプロイは Azure公式Bootstrap手順に従うことを説明

### index.md: トップページ

- "手を動かす" → "コードを読む" に変更
- クローン推奨の記述を削除
- 実際にデプロイする場合の手順（Chapter 14-15）を明記

## 正しい学習フロー

1. **学習段階**: このリポジトリのコードをGitHubで読む（クローン不要）
2. **実践段階**: Chapter 14-15のAzure公式Bootstrap手順に従う
3. **構築完了**: 自分専用のリポジトリが自動作成される（この例と同じ構造）

## 影響

- 誤解を招く記述が削除され、学習者が正しい手順を理解できる
- Chapter 14-15への適切な誘導
- このリポジトリの位置づけ（学習用コード例）が明確化

--- a/docs-site/docs/00_はじめに.md
+++ b/docs-site/docs/00_はじめに.md
@@ -6,25 +6,18 @@
 
 この教科書は、**実際のコードを見ながら読む**ことを強く推奨します。
 
-=== "GitHubで見る（一番簡単）"
-
-    教科書を読みながら、ブラウザで https://github.com/shuhei0720org01/alz-mgmt を開いておく。
-
+!!! tip "推奨: GitHubで見る"
+    教科書を読みながら、ブラウザで https://github.com/shuhei0720org01/alz-mgmt を開いておきましょう。
+    
     - ファイル構造が見える
     - コードを検索できる
     - ファイルをクリックすれば開ける
 
-=== "クローンしてVSCodeで見る（本格的に学びたい人向け）"
-
-    ```bash
-    git clone https://github.com/shuhei0720org01/alz-mgmt.git
-    cd alz-mgmt
-    code .
-    ```
-
-    - ファイル間の移動が速い
-    - 複数ファイルを同時に開ける
-    - `terraform plan`で動作確認できる
+!!! warning "このリポジトリをクローンしないでください"
+    このリポジトリは**学習用のコード例**です。クローンしても実行できません。
+    
+    実際にデプロイしたい場合は、[Chapter 14: Bootstrap Phase 1](./14_Bootstrap_Phase_1.md)から始めてください。
+    Bootstrap完了後、あなた専用のリポジトリが作成されます。
 
 ### 📖 読み方
 
@@ -34,15 +27,23 @@
 2. **コードを確認する**
    - 教科書で具体的なファイル名（`platform-landing-zone.auto.tfvars`など）が出てきたら、GitHubまたはVSCodeでそのファイルを開く
    
-3. **手を動かす**（できれば）
-   - クローンした場合は、コメントを追加したり変更してみる
-   - `terraform plan`で何が起きるか確認する（デプロイはしなくてもOK）
+3. **コードを理解する**（重要）
+   - コードの構造や設定値を確認する
+   - コメントを読んで設計意図を理解する
+   - 他のファイルとの関係性を把握する
 
-!!! warning "デプロイ前の注意"
-    このリポジトリを実際にデプロイすると、Azureに課金が発生します。  
-    学習目的なら、**コードを読むだけでも十分効果があります**。
-
-    デプロイしたい場合は、[14_Bootstrap_Phase_1.md](./14_Bootstrap_Phase_1.md)を必ず読んでから実行してください。
+!!! warning "このリポジトリについて注意"
+    **このリポジトリは完成済みのコード例です。**
+    
+    - ✅ **学習用**: コードを読んで構造を理解する教材として使う
+    - ❌ **デプロイ用ではない**: このリポジトリをクローンしても実行できません
+    
+    **実際にAzure Landing Zonesをデプロイしたい場合**:
+    
+    1. [Chapter 14: Bootstrap Phase 1](./14_Bootstrap_Phase_1.md)から始めてください
+    2. Azure公式のBootstrap手順に従って、最初から環境を構築します
+    3. Bootstrap完了後、あなた専用のリポジトリが作成されます
+    4. そのリポジトリがこのコード例のような構造になります
 
 ---
 
