--- a/docs-site/docs/02_プロジェクト構造.md
+++ b/docs-site/docs/02_プロジェクト構造.md
@@ -1,5 +1,10 @@
 # 02. プロジェクト構造 - ファイルとフォルダの全体像
 
+!!! info "この章で学ぶこと"
+    このリポジトリ（完成済みのコード例）のファイル構成を理解します。
+    
+    **注意**: このリポジトリは学習用の完成済みコード例です。実際にAzure Landing Zonesをデプロイする場合は、Chapter 14-15のAzure公式Bootstrap手順に従って、新しいリポジトリが自動作成されます。そのリポジトリがこのような構造になります。
+
 ## ファイル構成の鳥瞰図
 
 まず、全体のファイル構成を見てみましょう：
